--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -4,7 +4,23 @@
       <%= image_tag "icons/left-arrow.svg", alt: "back", class: "icon", height: 16, width: 16 %>
     <% end %>
     <p class="textDarkGray uppercase">Edit booking</p>
-    <button><%= image_tag "icons/more.svg", alt: "more", width: 18, height: 18 %></button>
+    <% if @booking.manager == current_user.manager %>
+      <div class="relative">
+        <div class="none actions-container">
+          <div class="actions flex flex-column job-show">
+            <% if policy(@booking).cancel? %>
+              <%= button_to booking_cancel_path(@booking), method: :patch, class: "action-link", data: { confirm: "Are you sure you want to cancel the booking?" } do %>
+                Cancel
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+
+        <button class="trigger">
+          <%= image_tag "icons/more.svg", class: "toggler", alt: "more", width: 24, height: 24 %>
+        </button>
+      </div>
+    <% end %>
   </section>
   <section class="mt-3">
     <div class="flex mx-3">
