--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -12,6 +12,17 @@
 			font-size: 14px;
 		}
 
+		.bookings-count {
+			@extend .flex, .items-center, .my-3;
+
+			color: $blue-2;
+			font-weight: 600;
+
+			img {
+				@extend .ml-1;
+			}
+		}
+
 		.card-container {
 			@extend .py-2, .px-3, .rounded, .my-3;
 
