--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -1,4 +1,9 @@
 <div id="manager">
+  <%= link_to profiles_path(ids: @today_booked_profiles.pluck(:id)), class: "bookings-count" do %>
+    You have <%= pluralize @today_booked_profiles.count, "freelancer" %> booked today
+    <%= image_tag "icons/right-arrow-blue.svg", alt: "profiles", class: "vertical-align-middle", width: 16, height: 16 %>
+  <% end %>
+
   <div class="shadow-alt rounded p-3 mb-3">
     <h3 class="mt-0 mb-1">Bookings</h3>
     <p class="subtitle m-0"><%= pluralize @booked_profiles.count, "booking" %> across <%= pluralize @booked_profiles.distinct.count("profiles.id"), "freelancer" %></p>
