--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,6 +10,7 @@ $light-black: #6c7b8a;
 $blue: #828ff4;
 $blue-2: #4c5fef;
 $blue-3: #4888ff;
+$flat-blue-5: #cacffb;
 $blueish-gray: #f4f6f9;
 
 $flat-gray-3: #dfe5ee;
