blue background indicator

--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -62,6 +62,10 @@
 
 			.jobs {
 				.job-card {
+					&.selected {
+						background: $flat-blue-5 !important;
+					}
+
 					.skill-pill {
 						@extend .mr-0;
 					}
