--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -55,8 +55,13 @@
 			&.h-0 {
 				.jobs,
 				.job-simple-card,
-				.job-card {
+				.job-card,
+				.job-card-filter {
 					@extend .h-0, .m-0, .p-0;
+
+					> * {
+						@extend .h-0;
+					}
 				}
 			}
 
