--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -62,6 +62,8 @@
             <span class="textWhite">You have already applied to this job</span>
           </div>
         </button>
+      <% elsif current_user.freelancer? && current_user.find_connection(@job.manager.user) %>
+        <%# Don't render button %>
       <% else %>
         <%= link_to job_job_applications_path(@job, job_application: { profile_id: current_user.profile.id }), method: :post, class: "btn btn-secondary my-3" do %>
           <div class="flex justify-content-center items-center">
