--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,7 @@
 nav.navbar {
-  flex-shrink: 0; // For sticky footer behavior
+	@extend .mb-3;
+
+	flex-shrink: 0; // For sticky footer behavior
 	position: sticky;
 	bottom: 0;
 	background: white;
@@ -10,9 +12,8 @@ nav.navbar {
 
 	a.nav-link {
 		img.nav-icon {
-			height: 32px;
-			width: 32px;
+			height: 20px;
+			width: 20px;
 		}
 	}
 }
-
