--- a/app/assets/stylesheets/config/utilities/_spacing.scss
+++ b/app/assets/stylesheets/config/utilities/_spacing.scss
@@ -161,24 +161,27 @@
 }
 
 .mr-4 {
-  margin-right: 32px;
+	margin-right: 32px;
 }
 
 .ml-4 {
-  margin-left: 32px;
+	margin-left: 32px;
 }
 
 .my-4 {
-  @extend .mt-4, .mb-4;
+	@extend .mt-4, .mb-4;
 }
 
 .mx-4 {
-  @extend .mr-4, .ml-4;
+	@extend .mr-4, .ml-4;
 }
-
 
 .mt-5 {
 	margin-top: 64px;
+}
+
+.pt-5 {
+	padding-top: 64px;
 }
 
 // Padding
