--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,9 +1,13 @@
 #dashboardPage {
-	h1 {
-		@extend .uppercase;
+	.head {
+		@extend .pt-4;
 
-		font-weight: 500;
-		font-size: 20px;
+		h1 {
+			@extend .uppercase;
+
+			font-weight: 500;
+			font-size: 20px;
+		}
 	}
 
 	#manager,
