--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -8,6 +8,13 @@
 			font-weight: 500;
 			font-size: 20px;
 		}
+
+		.trigger {
+			img {
+				width: 32px;
+				height: 32px;
+			}
+		}
 	}
 
 	#manager,
