--- a/app/views/managers/new.html.erb
+++ b/app/views/managers/new.html.erb
@@ -1,68 +1,34 @@
+<div class="managerNew w-100">
+  <%= simple_form_for @manager do |f| %>
+    <div class="profileBanner flex items-center justify-content-center relative" style="background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.56), rgba(255, 255, 255, 0.56))">
+        <%= f.simple_fields_for :user_attributes do |uf| %>
+      <div class="camera">
+          <%= uf.input :avatar, as: :file, input_html: { class: 'none'}, label_html: { class: 'upload-photo'}, label: "#{(image_tag 'icons/camera', id: 'camera-icon', width: 32, height: 32)}".html_safe, required: false %>
+      </div>
+    </div>
 
-<div class="manager-new-page">
-  <%= simple_form_for @manager, html: { class: "mx-3" } do |f| %>
-    <div class="step-1">
-      <h3 class="uppercase text-center mt-0 pt-3">Your profile</h3>
-      <%= f.simple_fields_for :user_attributes do |u| %>
-        <div class="flex justify-content-center">
-          <%= image_tag "icons/camera.svg", alt: "preview of image", id: "avatar-preview", class: "initial avatar avatar-circle", width: 300 %>
-        </div>
-        <%= u.input :avatar, as: :file,
-                    required: false,
-                    label: "Display picture", label_html: { class: "uppercase textSm mt-3" },
-                    wrapper_html: { class: "flex flex-column-reverse justify-content-center items-center mb-3" },
-                    input_html: { class: "none" } %>
-        <%= u.input :first_name, label: false,
-                    placeholder: "First name",
-                    wrapper_html: { class: "flex mb-3" },
-                    input_html: { class: "w-100" } %>
-        <%= u.input :last_name, label: false,
-                    placeholder: "Last name",
-                    wrapper_html: { class: "flex mb-3" },
-                    input_html: { class: "w-100" } %>
+    <div class="profileHeader">
+        <%= uf.input :first_name, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "pr-3"} %>
+        <%= uf.input :last_name, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "pl-3 overflow-hidden"} %>
       <% end %>
-      <%= f.input :job_title,
-                  required: false,
-                  label: false,
-                  wrapper_html: { class: "flex mb-3" },
-                  input_html: { class: "w-100" },
-                  placeholder: "Job title" %>
-      <div class="flex justify-content-end">
-        <button class="next-step" type="button"><%= image_tag "icons/arrow-right.svg", alt: "submit", width: 16, height: 16 %></button>
+    </div>
+
+    <%= f.input :job_title, required: false, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "px-3 overflow-hidden job-title"} %>
+
+    <%= f.simple_fields_for :company_attributes do |cf|%>
+      <div class="company-atttributes flex justify-content-between items-end">
+        <%= cf.input :name, label: "Company name", required: true, label_html: { class: "textGray mt-3 block" }, input_html: { class: "w-100 mt-2 border-box lg" }, wrapper_html: { class: "profession-edit px-3 overflow-hidden flex-grow-1 pb-3"}    %>
+
+        <%= cf.input :logo, as: :file, input_html: { class: 'none' }, label_html: { class: 'upload-photo flex flex-column justify-content-center items-center', id: "label-logo-placeholder"},label: "#{(image_tag 'icons/picture-placeholder', id: 'picture-placeholder-icon', width: 28, height: 28)}LOGO".html_safe, wrapper_html: { class: "px-3"} %>
       </div>
+
+    <% end %>
+
+    <div class="p-3 mt-4">
+      <button type="submit" form="new_manager" class="btn btn-primary my-3 save w-100" />
+          <%= image_tag("icons/save", alt: "save", class: "mr-2") %>
+          SAVE
+      </button>
     </div>
-    <div class="step-2 none">
-      <h3 class="uppercase text-center mt-0 pt-3">Your company</h3>
-      <% if current_user.invited_by&.manager %>
-        <%= f.simple_fields_for :company_attributes do |ff| %>
-          <%= ff.input :name, label: "Your company name:", input_html: { value: current_user.invited_by.manager.company.name, disabled: true } %>
-        <% end %>
-        <%= f.association :company, input_html: { value: current_user.invited_by.manager.company.id }, as: :hidden %>
-      <% else %>
-        <%= f.simple_fields_for :company_attributes do |ff| %>
-          <div class="flex justify-content-center">
-            <%= image_tag "icons/camera.svg", alt: "preview of image", id: "logo-preview", class: "initial avatar avatar-circle", width: 300 %>
-          </div>
-          <%= ff.input :logo, as: :file,
-                      required: false,
-                      label: "Company logo", label_html: { class: "uppercase textSm mt-3" },
-                      wrapper_html: { class: "flex flex-column-reverse justify-content-center items-center mb-3" },
-                      input_html: { class: "none" } %>
-          <%= ff.input :name, label: false,
-                       required: false,
-                       wrapper_html: { class: "flex mb-3" },
-                       input_html: { class: "w-100" },
-                       placeholder: "Company" %>
-        <% end %>
-      <% end %>
-      <div class="flex justify-content-between">
-        <button class="previous-step" type="button"><%= image_tag "icons/left-arrow-blue.svg", alt: "submit", width: 16, height: 16 %></button>
-        <button type="submit"><%= image_tag "icons/arrow-right.svg", alt: "submit", width: 16, height: 16 %></button>
-      </div>
-    </div>
-    <div class="flex justify-content-center items-center step-indicator-wrapper">
-      <div class="step-indicator step-indicator-1 active"><%= image_tag "icons/step-circle.svg", alt: "step indicator", width: 8, height: 8 %></div>
-      <div class="step-indicator step-indicator-2"><%= image_tag "icons/step-circle.svg", alt: "step indicator", width: 8, height: 8 %></div>
-    </div>
-  <% end %>
-</div>
+
+<% end %>
