migrate manager booking card to new design

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
-<div class="bookings-index">
-  <section class="mx-3 mt-4 flex justify-content-between items-center">
+<div class="bookings-index bg-blueish-gray">
+  <section class="px-3 pt-4 flex justify-content-between items-center">
     <%= link_to :back do %>
       <%= image_tag "icons/left-arrow.svg", alt: "back", class: "icon", height: 16, width: 16 %>
     <% end %>
