--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,5 +1,6 @@
 // Import page-specific CSS files here.
 @import "booking_edit";
+@import "bookings_index";
 @import "conversations_index";
 @import "conversations_show";
 @import "dashboard";
