--- a/app/views/bookings/_manager_card.html.erb
+++ b/app/views/bookings/_manager_card.html.erb
@@ -11,8 +11,21 @@
         </div>
       </div>
     </div>
-    <button>
-      <%= image_tag "icons/more.svg", alt: "more", width: 16, height: 16 %>
-    </button>
+    <div class="relative">
+      <div class="none actions-container" data-booking-id="<%= booking.id %>">
+        <div class="actions flex flex-column bookings-index">
+          <%= link_to "Edit", edit_booking_path(booking), class: "action-link" %>
+          <% convo ||= Conversation.find_by(manager: booking.manager, profile: booking.profile) %>
+          <% if convo %>
+            <%= link_to "Message", conversation_path(convo), class: "action-link" %>
+          <% else %>
+            <%= link_to "Message", profile_conversations_path(conversation: { profile_id: booking.profile.id }, profile_id: booking.profile.id), method: :post, class: "action-link" %>
+          <% end %>
+        </div>
+      </div>
+      <button class="trigger" data-booking-id="<%= booking.id %>">
+        <%= image_tag "icons/more.svg", alt: "more", width: 16, height: 16 %>
+      </button>
+    </div>
   </div>
 </div>
