added dummy filter button

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,7 +5,9 @@
         <%= image_tag "icons/left-arrow.svg", alt: "back", class: "icon", height: 16, width: 16 %>
       <% end %>
       <p class="textDarkGray">Bookings</p>
-      <button style="height: 16px; width: 16px"> </button>
+      <button id="filter-trigger">
+        <%= image_tag "icons/filter.svg", alt: "filter", width: 16, height: 16 %>
+      </button>
     </section>
 
     <section class="switch bg-blueish-gray flex justify-content-between mx-3 p-1 rounded my-3">
