--- a/app/views/bookings/_manager_card.html.erb
+++ b/app/views/bookings/_manager_card.html.erb
@@ -2,7 +2,7 @@
   <div class="flex justify-content-between items-center">
     <div class="flex flex-column">
       <h3 class="m-0 textMd mb-1"><%= booking.title %></h3>
-      <p class="m-0 textBetween"><%= booking.full_date_time %></p>
+      <p class="m-0 textSm uppercase"><%= booking.full_date_time %></p>
       <div class="flex items-center mt-3">
         <%= image_tag avatar_url(booking.profile), alt: "Profile's avatar", class: "avatar small avatar-circle mr-2" %>
         <div class="flex flex-column">
