--- a/app/views/bookings/_manager_card.html.erb
+++ b/app/views/bookings/_manager_card.html.erb
@@ -14,12 +14,18 @@
     <div class="relative">
       <div class="none actions-container" data-booking-id="<%= booking.id %>">
         <div class="actions flex flex-column bookings-index">
-          <%= link_to "Edit", edit_booking_path(booking), class: "action-link" %>
+          <%= link_to edit_booking_path(booking), class: "action-link" do %>
+            <%= image_tag "icons/edit-white.svg", alt: "edit icon", width: 24, height: 24, class: "vertical-align-middle mr-2" %> Edit
+          <% end %>
           <% convo ||= Conversation.find_by(manager: booking.manager, profile: booking.profile) %>
           <% if convo %>
-            <%= link_to "Message", conversation_path(convo), class: "action-link" %>
+            <%= link_to conversation_path(convo), class: "action-link" do %>
+              <%= image_tag "icons/message-white.svg", alt: "message icon", width: 16, height: 16, class: "vertical-align-middle mr-2 pl-1" %> Message
+            <% end %>
           <% else %>
-            <%= link_to "Message", profile_conversations_path(conversation: { profile_id: booking.profile.id }, profile_id: booking.profile.id), method: :post, class: "action-link" %>
+            <%= link_to profile_conversations_path(conversation: { profile_id: booking.profile.id }, profile_id: booking.profile.id), method: :post, class: "action-link" do %>
+              <%= image_tag "icons/message-white.svg", alt: "message icon", width: 16, height: 16, class: "vertical-align-middle mr-2 pl-1" %> Message
+            <% end %>
           <% end %>
         </div>
       </div>
