make card a link

--- a/app/views/bookings/_manager_card.html.erb
+++ b/app/views/bookings/_manager_card.html.erb
@@ -1,4 +1,4 @@
-<div class="booking-card <%= booking.status %> mb-3">
+<div class="booking-card mb-3 <%= booking.status %>" data-id="<%= booking.id %>" role="button">
   <div class="flex justify-content-between items-center">
     <div class="flex flex-column">
       <h3 class="m-0 textMd mb-1"><%= booking.title %></h3>
