--- a/app/views/bookings/_booking_cards.html.erb
+++ b/app/views/bookings/_booking_cards.html.erb
@@ -1,3 +1,7 @@
-<% bookings.each do |booking| %>
-  <%= render partial: "bookings/#{current_user.role}_card", locals: { booking: booking } %>
+<% if bookings.length.positive? %>
+  <% bookings.each do |booking| %>
+    <%= render partial: "bookings/#{current_user.role}_card", locals: { booking: booking } %>
+  <% end %>
+<% else %>
+  <h3 class="text-center">No profiles found!</h3>
 <% end %>
