--- a/app/views/bookings/_freelancer_card.html.erb
+++ b/app/views/bookings/_freelancer_card.html.erb
@@ -1,4 +1,4 @@
-<%= link_to booking_path(booking), class: "booking-card mb-3 #{booking.status}" do %>
+<%= link_to booking_path(booking), class: "booking-card bg-white mb-3 #{booking.status}" do %>
   <div class="flex justify-content-between items-center">
     <div class="flex flex-column">
       <h3 class="m-0 textMd mb-1"><%= booking.title %></h3>
