--- a/app/views/bookings/_manager_card.html.erb
+++ b/app/views/bookings/_manager_card.html.erb
@@ -1,37 +1,50 @@
-<div class="booking-card bg-white mb-3 <%= booking.status %>" data-id="<%= booking.id %>" role="button">
-  <div class="flex justify-content-between items-center">
-    <div class="flex flex-column">
-      <h3 class="m-0 textMd mb-1"><%= booking.title %></h3>
-      <p class="m-0 textSm uppercase"><%= booking.full_date_time %></p>
-      <div class="flex items-center mt-3">
-        <%= image_tag avatar_url(booking.profile), alt: "Profile's avatar", class: "avatar small avatar-circle mr-2" %>
-        <div class="flex flex-column">
-          <h5 class="m-0 textBetween"><%= booking.profile.user.display_name %></h5>
-          <p class="m-0 textSm textLightBlack"><%= booking.profile.profession %></p>
+<div>
+  <% if first %>
+    <p class="uppercase mb-3">
+      <% if Date.today.beginning_of_week == day %>
+        This week
+      <% elsif (Date.today + 1.week).beginning_of_week == day %>
+        Next week
+      <% else %>
+        <%= day.strftime("%d %b") %> - <%= day.end_of_week.strftime("%d %b") %>
+      <% end %>
+    </p>
+  <% end %>
+  <div class="booking-card bg-white mb-3 <%= booking.status %>" data-id="<%= booking.id %>" role="button">
+    <div class="flex justify-content-between items-center">
+      <div class="flex flex-column">
+        <h3 class="m-0 textMd mb-1"><%= booking.title %></h3>
+        <p class="m-0 textSm uppercase"><%= booking.full_date_time %></p>
+        <div class="flex items-center mt-3">
+          <%= image_tag avatar_url(booking.profile), alt: "Profile's avatar", class: "avatar small avatar-circle mr-2" %>
+          <div class="flex flex-column">
+            <h5 class="m-0 textBetween"><%= booking.profile.user.display_name %></h5>
+            <p class="m-0 textSm textLightBlack"><%= booking.profile.profession %></p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="relative">
-      <div class="none actions-container" data-booking-id="<%= booking.id %>">
-        <div class="actions flex flex-column bookings-index">
-          <%= link_to edit_booking_path(booking), class: "action-link" do %>
-            <%= image_tag "icons/edit-white.svg", alt: "edit icon", width: 24, height: 24, class: "vertical-align-middle mr-2" %> Edit
-          <% end %>
-          <% convo ||= Conversation.find_by(manager: booking.manager, profile: booking.profile) %>
-          <% if convo %>
-            <%= link_to conversation_path(convo), class: "action-link" do %>
-              <%= image_tag "icons/message-white.svg", alt: "message icon", width: 16, height: 16, class: "vertical-align-middle mr-2 pl-1" %> Message
+      <div class="relative">
+        <div class="none actions-container" data-booking-id="<%= booking.id %>">
+          <div class="actions flex flex-column bookings-index">
+            <%= link_to edit_booking_path(booking), class: "action-link" do %>
+              <%= image_tag "icons/edit-white.svg", alt: "edit icon", width: 24, height: 24, class: "vertical-align-middle mr-2" %> Edit
             <% end %>
-          <% else %>
-            <%= link_to profile_conversations_path(conversation: { profile_id: booking.profile.id }, profile_id: booking.profile.id), method: :post, class: "action-link" do %>
-              <%= image_tag "icons/message-white.svg", alt: "message icon", width: 16, height: 16, class: "vertical-align-middle mr-2 pl-1" %> Message
+            <% convo ||= Conversation.find_by(manager: booking.manager, profile: booking.profile) %>
+            <% if convo %>
+              <%= link_to conversation_path(convo), class: "action-link" do %>
+                <%= image_tag "icons/message-white.svg", alt: "message icon", width: 16, height: 16, class: "vertical-align-middle mr-2 pl-1" %> Message
+              <% end %>
+            <% else %>
+              <%= link_to profile_conversations_path(conversation: { profile_id: booking.profile.id }, profile_id: booking.profile.id), method: :post, class: "action-link" do %>
+                <%= image_tag "icons/message-white.svg", alt: "message icon", width: 16, height: 16, class: "vertical-align-middle mr-2 pl-1" %> Message
+              <% end %>
             <% end %>
-          <% end %>
+          </div>
         </div>
+        <button class="trigger" data-booking-id="<%= booking.id %>">
+          <%= image_tag "icons/more.svg", alt: "more", width: 16, height: 16 %>
+        </button>
       </div>
-      <button class="trigger" data-booking-id="<%= booking.id %>">
-        <%= image_tag "icons/more.svg", alt: "more", width: 16, height: 16 %>
-      </button>
     </div>
   </div>
 </div>
