--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -32,7 +32,7 @@
 
   <section class="mx-3 mt-4">
     <div class="flex flex-column" id="booking-cards">
-      <%= render partial: "bookings/booking_cards", locals: { bookings: @bookings } %>
+      <%= render partial: "bookings/booking_cards", locals: { booking_group: @bookings } %>
     </div>
   </section>
 </div>
