--- a/app/views/bookings/_manager_card.html.erb
+++ b/app/views/bookings/_manager_card.html.erb
@@ -1,6 +1,6 @@
 <div>
   <% if first %>
-    <p class="uppercase mb-3"><%= week(day) %></p>
+    <p class="uppercase mt-0 mb-3"><%= week(day) %></p>
   <% end %>
   <div class="booking-card bg-white mb-3 <%= booking.status %>" data-id="<%= booking.id %>" role="button">
     <div class="flex justify-content-between items-center">
