--- a/app/views/bookings/_booking_cards.html.erb
+++ b/app/views/bookings/_booking_cards.html.erb
@@ -5,5 +5,5 @@
     <% end %>
   <% end %>
 <% else %>
-  <h3 class="text-center">No profiles found!</h3>
+  <h3 class="text-center">No bookings found!</h3>
 <% end %>
