--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -25,6 +25,7 @@ $flat-green-5: #d3f7ed;
 
 $flat-red-2: #cc383c;
 $flat-red-3: #ff464b;
+$flat-red-4: #ff6b6f;
 $flat-red-5: #ffdcdd;
 
 $flat-orange-3: #fed18a;
