--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -8,7 +8,9 @@
   .profile-card-avatar {
     object-fit: contain;
     @extend .rounded-square;
-    box-shadow: 0px 3px 6px -2px rgba(50, 51, 9, .1);
+    box-shadow: 0px 3px 8px -1px rgba(50, 51, 9, .2);
+    background-position: center;
+    background-size: cover;
   }
 
 	&:nth-child(odd) {
