--- a/app/views/bookings/_widget.html.erb
+++ b/app/views/bookings/_widget.html.erb
@@ -1,9 +1,24 @@
 <div class="booking-widget rounded shadow p-3 <%= booking.status %>">
   <div class="flex justify-content-between items-center">
     <h3 class="m-0"><%= booking.title %></h3>
-    <div class="flex">
+    <div class="flex items-center mb-2">
       <%= image_tag avatar_url(booking.profile), alt: "profile avatar", class: "avatar avatar-circle small" %>
-      <button type="button" id="trigger"><%= image_tag "icons/more.svg", alt: "menu", width: 16, height: 16 %></button>
+      <div class="relative">
+        <div class="none actions-container">
+          <div class="actions flex flex-column job-show">
+            <% if policy(booking).edit? %>
+              <%= link_to edit_booking_path(booking), class: "action-link" do %>
+                <%= image_tag "icons/edit-white.svg", alt: "edit", width: 32, height: 32, class: "vertical-align-middle" %> EDIT
+              <% end %>
+            <% end %>
+            <%= link_to conversation_path(booking_id: booking.id), class: "action-link" do %>
+              <%= image_tag "icons/message.svg", alt: "message", class: "vertical-align-middle" %> Message
+            <% end %>
+          </div>
+        </div>
+
+        <button type="button" class="trigger"><%= image_tag "icons/more.svg", alt: "menu", width: 16, height: 16 %></button>
+      </div>
     </div>
   </div>
 
@@ -37,21 +52,22 @@
     </div>
   </div>
 
-  <div>
-    <p class="my-3"><%= booking.description %></p>
-    <% if booking.attachments.attached? %>
-      <div class="flex flex-column">
-        <% booking.attachments.each do |attachment| %>
-          <%= link_to "#", class: "btn btn-float blue text-center textMd attachment" do %>
-            <%= image_tag "icons/download-blue.svg", alt: "download attachment", width: 32, height: 32, class: "vertical-align-middle" %>
-            <%= attachment.blob.filename %>
-          <% end %>
+  <p class="my-3"><%= booking.description %></p>
+  <% if booking.attachments.attached? %>
+    <div class="flex flex-column">
+      <% booking.attachments.each do |attachment| %>
+        <%= link_to "#", class: "btn btn-float blue text-center textMd attachment" do %>
+          <%= image_tag "icons/download-blue.svg", alt: "download attachment", width: 32, height: 32, class: "vertical-align-middle" %>
+          <%= attachment.blob.filename %>
         <% end %>
-      </div>
-    <% end %>
-    <div>
-      <p class="textLightBlack mb-0">Location</p>
-      <p class="textBlue"><%= booking.profile.location %></p>
+      <% end %>
     </div>
+  <% end %>
+  <div>
+    <p class="textLightBlack mb-0">Location</p>
+    <p class="textBlue"><%= booking.profile.location %></p>
   </div>
+  <% if policy(booking).cancel? %>
+    <%= link_to "Cancel", "#", class: "btn btn-float red text-center" %>
+  <% end %>
 </div>
