--- a/app/assets/stylesheets/pages/_job_show.scss
+++ b/app/assets/stylesheets/pages/_job_show.scss
@@ -58,7 +58,11 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     box-shadow: 0px 3px 6px -2px rgba(50, 51, 9, .1);
-    object-fit: contain;
+    width: 64px;
+    height: 40px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
   .skill-pill {
