--- a/app/views/connections/ajax_create.js.erb
+++ b/app/views/connections/ajax_create.js.erb
@@ -4,7 +4,9 @@
   // Change add button to book button
   addButton.href = "<%= new_profile_booking_path(@profile) %> ";
   addButton.innerHTML = `<img alt="Book user" src="${scheduleIconPath}"><p class="textWhite">BOOK</p>`;
-
+  addButton.dataset["method"] = "get";
+  addButton.dataset["remote"] = false;
+  addButton.rel = "";
   // Add remove from network option on actions container
   const actions = document.querySelector(".actions-container .actions");
   const removePersonIconPath = "<%= image_path 'icons/user-minus' %>";
