--- a/app/views/bookings/_widget.html.erb
+++ b/app/views/bookings/_widget.html.erb
@@ -12,7 +12,7 @@
               <% end %>
             <% end %>
             <%= link_to conversation_path(booking_id: booking.id), class: "action-link" do %>
-              <%= image_tag "icons/message.svg", alt: "message", class: "vertical-align-middle" %> Message
+              <%= image_tag "icons/message-white.svg", alt: "message", class: "vertical-align-middle pl-1 mr-2" %> Message
             <% end %>
           </div>
         </div>
