--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -18,7 +18,7 @@
           <p class="subtitle m-0"><%= pluralize @bookings.accepted.count, "booking" %></p>
         </div>
       </div>
-      <%= link_to "#" do %>
+      <%= link_to bookings_path(status: 1) do %>
         <%= image_tag "icons/right-arrow.svg", alt: "accepted bookings" %>
       <% end %>
     </div>
@@ -33,7 +33,7 @@
           <p class="subtitle m-0"><%= pluralize @bookings.pending.count, "booking" %></p>
         </div>
       </div>
-      <%= link_to "#" do %>
+      <%= link_to bookings_path(status: 0) do %>
         <%= image_tag "icons/right-arrow.svg", alt: "pending bookings" %>
       <% end %>
     </div>
@@ -48,7 +48,7 @@
           <p class="subtitle m-0"><%= pluralize @bookings.rejected.count, "booking" %></p>
         </div>
       </div>
-      <%= link_to "#" do %>
+      <%= link_to bookings_path(status: 2) do %>
         <%= image_tag "icons/right-arrow.svg", alt: "rejected bookings" %>
       <% end %>
     </div>
