show manager cards

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -10,6 +10,7 @@
 @import "job_edit";
 @import "job_show";
 @import "mail";
+@import "managers_index";
 @import "managers_new";
 @import "managers_show";
 @import "profile_show";
