--- a/app/views/managers/index.html.erb
+++ b/app/views/managers/index.html.erb
@@ -1,7 +1,16 @@
 <div id="managers-index">
-  <div class="search-bar">
-    <input type="text" placeholder="Search" />
-  </div>
+  <section class="head">
+    <button>
+      <%= image_tag "icons/search.svg", alt: "search" %>
+    </button>
+    <div class="flex flex-column items-center justify-content-center">
+      <p class="m-0">CLIENTS (<%= @managers.length %>)</p>
+      <span class="textSm textLightBlack">Managers who have added you</span>
+    </div>
+    <button id="filter-trigger">
+      <%= image_tag "icons/filter.svg", alt: "filter" %>
+    </button>
+  </section>
 
   <div id="manager-cards">
     <%= render partial: "managers/cards", locals: { managers: @managers } %>
