--- a/app/assets/stylesheets/pages/_managers_index.scss
+++ b/app/assets/stylesheets/pages/_managers_index.scss
@@ -1,4 +1,15 @@
 #managers-index {
+	.head {
+		@extend .flex, .justify-content-between, .px-3, .mt-5, .mb-3;
+
+		button {
+			img {
+				width: 24px;
+				height: 24px;
+			}
+		}
+	}
+
 	#manager-cards {
 		@extend .px-3;
 
