--- a/app/views/managers/index.html.erb
+++ b/app/views/managers/index.html.erb
@@ -15,4 +15,8 @@
   <div id="manager-cards">
     <%= render partial: "managers/cards", locals: { managers: @managers } %>
   </div>
+
+  <div class="none" id="filter-content">
+    <%= render partial: "managers/filter_content" %>
+  </div>
 </div>
