moved edit button to a partial

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -66,26 +66,7 @@
         <% unless @links.empty? %>
           <h3 class=""><small class="textGray">LINKS</small></h3>
           <% @links.each do |link| %>
-            <%= button_tag target: :_blank, class: "btn-centered btn-secondary mb-3 flex items-center justify-content-center w-100" do  %>
-            <div class="flex justify-content-center items-center textWhite flex-grow-1">
-              <%= image_tag "icons/edit-white", alt: "edit", class: "mr-2", height: 32, width: 32 %>
-              <%= link.title&.capitalize %>
-            </div>
-            <!-- Actions container of blue btn for links -->
-            <div class="relative">
-              <div class="none actions-container" data-id="<%= link.id %>" >
-                <div class="actions flex flex-column">
-                  <%= link_to "Edit", "#", class: "action-link flex items-center w-100" %>
-                  <%= button_to "Remove", profile_attachment_path(link), class: "action-link flex items-center w-100", remote: true, method: :delete %>
-                </div>
-              </div>
-              <!-- Blue link button trigger -->
-              <div class="trigger" data-id="<%= link.id %>">
-                <%= image_tag "icons/more-white.svg", class: "toggler", width: 24, height: 24 %>
-              </div>
-            </div>
-            <!-- End of relative -->
-            <% end %>
+            <%= render "edit_link_button", link: link %>
           <% end %>
         <% end %>
       </div>
@@ -122,10 +103,7 @@
         <% unless @documents.empty? %>
           <h3 class=""><small class="textGray">DOCUMENTS</small></h3>
           <% @documents.each do |link| %>
-            <%= link_to download_attachment_path(link), method: :post, class: "btn-centered btn-secondary mb-3 flex items-center justify-content-center" do %>
-            <%= image_tag "icons/download-white", width: 32, height: 32, class: "mr-2" %>
-            <%= link.title&.capitalize %>
-            <% end %>
+            <%= render "edit_link_button", link: link %>
           <% end %>
         <% end %>
       </div>
