--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -57,7 +57,7 @@
       <% end %>
     <% else %>
       <% if JobApplication.find_by(job: @job, profile: current_user.profile) %>
-        <button disabled class="btn btn-secondary my-3">
+        <button disabled class="btn btn-secondary my-3 w-100">
           <div class="flex justify-content-center items-center">
             <%= image_tag "icons/people.svg", alt: "people", width: 24, height: 24, class: "mr-3" %>
             <span class="textWhite">You have already applied to this job</span>
@@ -66,12 +66,12 @@
       <% elsif current_user.freelancer? && current_user.find_connection(@job.manager.user) %>
         <%# Don't render button %>
       <% else %>
-        <%= link_to job_job_applications_path(@job, job_application: { profile_id: current_user.profile.id }), method: :post, class: "btn btn-secondary my-3" do %>
+        <button id="modal-toggler" class="btn btn-secondary my-3 w-100">
           <div class="flex justify-content-center items-center">
             <%= image_tag "icons/people.svg", alt: "people", width: 24, height: 24, class: "mr-3" %>
             <span class="textWhite">Apply</span>
           </div>
-        <% end %>
+        </button>
       <% end %>
     <% end %>
     <div class="applicant-avatars">
@@ -113,4 +113,26 @@
   <section class="mx-3">
     <p class="textGray"><%= @job.description %></p>
   </section>
+</div>
+
+<div class="none" id="modal-content">
+  <div class="card-content">
+    <%= image_tag "message-bubble.svg", alt: "message bubble", id: "bubble" %>
+    <div class="text-center">
+      <h1 class="textLg textDarkOne mt-0">Sell yourself</h1>
+      <p class="textLightBlack">In less than 200 words, let <%= @job.manager.company.name %> know why they should hire you</p>
+      <%= simple_form_for [@job, JobApplication.new], html: { class: "flex flex-column items-center justify-content-center" } do |f| %>
+        <%= f.input :cover_letter, label: false,
+                    input_html: { rows: 4, placeholder: "Subtly charming bacon evangelist. Coffee guru. Twitter junkie. Lifelong travel ninja. Subtly charming bacon evangelist. Coffee guru. Twitter junkie. Lifelong travel ninja." } %>
+
+        <button type="submit" class="uppercase btn btn-white w-100 mt-3">
+          <%= image_tag "icons/message.svg", alt: "Send application", class: "vertical-align-middle" %> Send
+        </button>
+      <% end %>
+      <div class="flex justify-content-center mt-3">
+        <button type="button" id="modal-exit" class="btn btn-float blue textMd">Skip</button>
+      </div>
+
+    </div>
+  </div>
 </div>
