--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "filter";
 @import "input";
 @import "message";
+@import "modal";
 @import "navbar";
 @import "profile_card";
 @import "skill_pill";
