--- a/app/views/profiles/_edit_link_button.html.erb
+++ b/app/views/profiles/_edit_link_button.html.erb
@@ -1,6 +1,10 @@
 <%= button_tag class: "btn-centered btn-secondary mb-3 flex items-center justify-content-center w-100" do %>
   <div class="flex justify-content-center items-center textWhite flex-grow-1">
-    <%= image_tag "icons/download-white", width: 32, height: 32, class: "mr-2" %>
+    <% if link.url.blank? %>
+      <%= image_tag "icons/download-white", width: 32, height: 32, class: "mr-2" %>
+    <% else %>
+      <%= image_tag "icons/edit-white", width: 32, height: 32, class: "mr-2" %>
+    <% end %>
     <%= link.title&.capitalize %>
   </div>
   <!-- Actions container of blue btn for documents -->
